--- a/src/sass/blocks/_consult.scss
+++ b/src/sass/blocks/_consult.scss
@@ -1,7 +1,7 @@
 .consult {
     min-height: 680px;
     padding: 100px 0 92px 0;
-    background: url('../../img/bg-request.jpg') center (center/cover) no-repeat;
+    background: url('../img/bg-request.jpg') center (center/cover) no-repeat;
     &__descr {
         margin-top: 80px;
         max-width: 400px;
