--- a/src/sass/libs/_icon-fonts.scss
+++ b/src/sass/libs/_icon-fonts.scss
@@ -1,5 +1,6 @@
 @font-face {
     font-family: 'icomoon';
+    font-display: swap;
     src:  url('../fonts/icomoon.eot?i1mrgl');
     src:  url('../fonts/icomoon.eot?i1mrgl#iefix') format('embedded-opentype'),
       url('../fonts/icomoon.ttf?i1mrgl') format('truetype'),
@@ -12,6 +13,7 @@
   [class^="icon-"], [class*=" icon-"] {
     /* use !important to prevent issues with browser extensions that change fonts */
     font-family: 'icomoon' !important;
+    font-display: swap;
     speak: none;
     font-style: normal;
     font-weight: normal;
